--- a/_config.yml
+++ b/_config.yml
@@ -11,5 +11,5 @@ twitter_username: your-twitter-handle
 wylhan: wylhan@github.com
 
 show_excerpts: true # set to false to remove excerpts on the homepage
-
+theme: jekyll-theme-minima
 theme: jekyll-theme-minima
